# observer

./: .env.example  .gitignore  Makefile  README.md  SOURCE_COVERAGE.md  pyproject.toml  schema.prisma
config/: baskets.yaml  instruments.yaml  series_registry.yaml  sources.yaml
docs/: known_limitations.md  metric_dictionary.md  operations.md  source_coverage.md
src/connectors/: bea.py  bls.py  eia.py  fred.py
src/db/: config.py  models.py  orm.py  queries.py  raw_archive.py  session.py  sync_registry.py  upsert.py  validate_registry.py
src/db/migrations/: 001_initial_schema.sql  run.py
src/ingest/: bea.py  bls.py  eia.py  fred.py  run_backfill.py  run_bea_backfill.py  run_bls_backfill.py  run_eia_backfill.py  run_refresh.py  verify_stage3.py
src/tests/: test_bea_connector.py  test_bea_stage4.py  test_bls_connector.py  test_bls_stage4.py  test_eia_connector.py  test_eia_stage4.py  test_fred_connector.py  test_fred_stage3.py  test_quality_flags.py  test_raw_archive.py  test_registry.py  test_schema_contract.py  test_stage2_storage.py  test_upsert.py  test_verify_stage3.py
src/tests/fixtures/: bea_nipa_t20804.json  bls_series_data.json  eia_crude_inventories.json  fred_observations.json  fred_observations_dff.json
src/transforms/: bea.py  bls.py  eia.py  fred.py  quality_flags.py
uploads/: autonomous_build_roadmap_and_agent_handoff.md  macro_financial_market_intelligence_spec_v2.md
